--- a/src/components/Post/post.css
+++ b/src/components/Post/post.css
@@ -25,11 +25,18 @@
     color: #1890FF;
     font-weight: 400px;
     margin-right: 13px;
+    text-decoration: none;
 }
 
 .title__likes {
     line-height: 28px;
     margin-left: 5px;
+    height: 28px;
+}
+
+.anticon{
+    line-height: 28px;
+    height: 28px;
 }
 
 .content__title {
@@ -37,8 +44,14 @@
 }
 
 .content__tags {
+    display: flex;
+    gap: 5px;
+    overflow: hidden;
+    min-height: 20px;
+}
+
+.tags__tag{
     border: 1px solid #00000080;
-    width: 38px;
     height: 20px;
     border-radius: 2px;
     text-align: center;
@@ -47,13 +60,14 @@
     line-height: 15px;
     letter-spacing: 0em;
     text-align: center;
-    padding: 2px;
+    padding: 2px; 
 }
 
 .content__preview {
     font-size: 12px;
     line-height: 22px;
     color: #000000BF;
+    min-height: 45px;
 }
 
 .post__info {
@@ -65,18 +79,19 @@
     font-size: 18px;
     line-height: 28px;
     letter-spacing: 0em;
-    text-align: left;
+    text-align: right;
 }
 
 .user__date {
     font-size: 12px;
     line-height: 22px;
     letter-spacing: 0px;
-    text-align: left;
+    text-align: right;
     color: #00000080;
 }
 
 .info__avatar {
     width: 46px;
     height: 46px;
+    border-radius: 50%;
 }
