--- a/src/components/App/app.css
+++ b/src/components/App/app.css
@@ -1,19 +1,22 @@
 html {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-*,*::after,*::before {
-    box-sizing: inherit;
-    padding: 0;
-    margin: 0;
-    border: 0;
+*,
+*::after,
+*::before {
+  box-sizing: inherit;
+  padding: 0;
+  margin: 0;
+  border: 0;
 }
 
 button {
-    background-color: transparent;
+  background-color: transparent;
 }
 
 .root {
-    height: 100vh;
-    background-color: #EBEEF3;;
+  height: 100%;
+  background-color: #ebeef3;
+  padding-bottom: 20px;
 }
