--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,20 +1,20 @@
-.header{
-    display: flex;
-    height: 80px;
-    text-align: center;
-    padding: 16px 22px;
-    gap: 30px;
-    background-color: white;
+.header {
+  display: flex;
+  height: 80px;
+  text-align: center;
+  padding: 16px 22px;
+  gap: 30px;
+  background-color: white;
 }
 
 .header__logo {
-    margin-right: auto;
-    font-family: 'Inter';
-    font-size: 18px;
-    line-height: 18px;
-    text-decoration: none;
-    color: black;
-    line-height: 48px;
+  margin-right: auto;
+  font-family: 'Inter';
+  font-size: 18px;
+  line-height: 18px;
+  text-decoration: none;
+  color: black;
+  line-height: 48px;
 }
 
 .header__sign-in,
@@ -22,45 +22,45 @@
 .header__article,
 .header__user,
 .header__logout {
-    text-decoration: none;
-    padding: 0 18px;
-    font-family: 'Inter';
-    font-size: 18px;
-    line-height: 51px;
-    letter-spacing: 0em;
-    text-align: left;
-    height: 51px;
-    color: black;
+  text-decoration: none;
+  padding: 0 18px;
+  font-family: 'Inter';
+  font-size: 18px;
+  line-height: 51px;
+  letter-spacing: 0em;
+  text-align: left;
+  height: 51px;
+  color: black;
 }
 
 .header__sign-up,
 .header__article {
-    border: 1px solid #52C41A;
-    border-radius: 5px;
-    color: #52C41A;
+  border: 1px solid #52c41a;
+  border-radius: 5px;
+  color: #52c41a;
 }
 
 .header__logout {
-    border: 1px solid black;
-    border-radius: 5px;
+  border: 1px solid black;
+  border-radius: 5px;
 }
 
 .header__article {
-    font-size: 14px;
-    line-height: 31px;
-    height: 31px; 
-    padding: 0 10px;
-    vertical-align: middle;
-    margin-top: auto;
-    margin-bottom: auto;
+  font-size: 14px;
+  line-height: 31px;
+  height: 31px;
+  padding: 0 10px;
+  vertical-align: middle;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .header__user {
-    display: flex;
-    padding: 0;
-    gap: 13px;
+  display: flex;
+  padding: 0;
+  gap: 13px;
 }
 
-.user__nickname.header__nickname{
-    line-height: 51px;
+.user__nickname.header__nickname {
+  line-height: 51px;
 }
